# LeNet-5-forward-optimized

./: CMakeLists.txt  demo.cc  non_optimize_10000_28_28.cc  non_optimize_1_28_28.cc  non_optimize_2500_56_56.cc  non_optimize_625_112_112.cc  optimized_10000_28_28.cc  optimized_1_28_28.cc  optimized_2500_56_56.cc  optimized_625_112_112.cc  readme.md  simple_10000_28_28.cc  simple_1_28_28.cc  simple_2500_56_56.cc  simple_625_112_112.cc  simple_improved_10000_28_28.cc  simple_improved_1_28_28.cc  simple_improved_2500_56_56.cc  simple_improved_625_112_112.cc
LeNet5/: LeNet5.cc  LeNet5.h
src/: CMakeLists.txt
src/LeNet5/: LeNet5.cc  LeNet5.h
src/cuda_conv/: CMakeLists.txt  cuda_conv_base.cc  cuda_conv_base.h  cuda_kernel.cu  cuda_kernel.h  cuda_lib.h
src/cuda_conv/cuda_kernels_none_optimize/: conv_kernel_none_optimize.cc  conv_kernel_none_optimize.h  kernel_none_optimize.cu  kernel_none_optimize.h
src/cuda_conv/cuda_kernels_optimized/: conv_kernel_optimized.cc  conv_kernel_optimized.h  kernel_optimized.cu  kernel_optimized.h
src/cuda_conv/cuda_kernels_simple/: conv_kernel_simple.cc  conv_kernel_simple.h  kernel_simple.cu  kernel_simple.h
src/cuda_conv/cuda_kernels_simple_improved/: conv_kernel_simple_improved.cc  conv_kernel_simple_improved.h  kernel_simple_improved.cu  kernel_simple_improved.h
src/cuda_conv/cuda_testing/: conv_kernel_testing.cc  conv_kernel_testing.h  kernel_testing.cu  kernel_testing.h
src/cuda_kernels/: conv_kernel.cc  conv_kernel.h  kernel.cu  kernel.h
src/cuda_kernels_simple/: conv_kernel_simple.cc  conv_kernel_simple.h  kernel_simple.cu  kernel_simple.h
src/cuda_testing/: conv_kernel_testing.cc  conv_kernel_testing.h  kernel_testing.cu  kernel_testing.h
src/layer/: conv.cc
x_test/: demo.cc
